# pre-commit-hook-ensure-sops

./: .pre-commit-hooks.yaml  pyproject.toml
pre_commit_hook_ensure_sops/: __main__.py  hook.py
tests/: test_main.py
